[package]
name = "cargo-msix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo_metadata = "0.14.1"
capturing-glob = "0.1.1"
clap = { version = "3.0.5", features = ["derive"] }
clap-cargo = { version = "0.8.0", features = ["cargo_metadata"] }
env_logger = "0.9.0"
glob = "0.3.0"
human-panic = "1.0.3"
log = "0.4.14"
xmltree = "0.10.3"
minidom = "0.13.0"
mustache = "0.9"
windows = { version = "0.30.0", features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Com_StructuredStorage",
]}
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
